--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(projectNum2)
 set(CMAKE_CXX_FLAGS "-std=c++14 -pthread")
 #set(CMAKE_CXX_STANDARD 14)
 
-add_executable(projectNum2 main.cpp Server.h MySerialServer.cpp MySerialServer.h ClientHandler.h MyTestClientHandler.h Solver.h CacheManager.h FileCacheManager.h StringReverse.cpp StringReverse.h State.h Searchable.h Searcher.h BFS.h MatrixSolver.h Matrix.h DFS.h BestFirsrtSearche.h AStar.h MyClientHandler.cpp MyClientHandler.h)
+add_executable(projectNum2 main.cpp Server.h MySerialServer.cpp MySerialServer.h ClientHandler.h MyTestClientHandler.h Solver.h CacheManager.h FileCacheManager.h StringReverse.cpp StringReverse.h State.h Searchable.h Searcher.h BFS.h MatrixSolver.h Matrix.h DFS.h BestFirstSearch.h AStar.h MyClientHandler.cpp MyClientHandler.h MyParallerServer.cpp MyParallerServer.h MyMain.h)
